src/test/deca/context/invalid/class_pass2_2.deca
// Description:
//    test minimaliste pour induire a l erreur lors du pass 2 (delaration de methode)
//
// Resultats:
// erreur
//
//
// Historique:
//    cree le 14/01/2025



class B {
    C idk(){

    }
}
